--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
     -sh -c 'pylint-patcher --rcfile=/usr/share/xivo-ci/pylintrc xivo_call_logs_client > pylint.txt'
 deps =
     -rrequirements.txt
+    -rtest-requirements.txt
     pylint-patcher
 whitelist_externals =
     sh
