--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: wazo-call-logs-client
+Source: wazo-call-logd-client
 Section: python
 Priority: extra
 Maintainer: Wazo Maintainers <dev@wazo.community>
@@ -6,13 +6,13 @@ Build-Depends: debhelper (>= 8), dh-python, python-all (>= 2.7), python-setuptoo
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
 
-Package: wazo-call-logs-client
+Package: wazo-call-logd-client
 Architecture: all
 Section: python
 Depends: ${python:Depends}, ${misc:Depends}, xivo-lib-rest-client, python-requests, python-stevedore
 Conflicts: xivo-call-logs-client
 Replaces: xivo-call-logs-client
 Provides: xivo-call-logs-client
-Description: xivo-call-logd client library in python
+Description: wazo-call-logd client library in python
  Wazo is a system based on a powerful IPBX, to bring an easy to
  install solution for telephony and related services.
