--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ ignore = E501
 
 [testenv]
 commands =
-    nosetests --cover-package=xivo_call_logs_client --with-xunit --with-coverage --cover-xml --cover-erase xivo_call_logs_client
+    nosetests --cover-package=wazo_call_logd_client --with-xunit --with-coverage --cover-xml --cover-erase wazo_call_logd_client
 deps =
     -rrequirements.txt
     -rtest-requirements.txt
@@ -20,7 +20,7 @@ deps =
 
 [testenv:pep8]
 commands =
-    -sh -c 'pep8 xivo_call_logs_client > pep8.txt'
+    -sh -c 'pep8 wazo_call_logd_client > pep8.txt'
 deps =
     pep8
 whitelist_externals =
@@ -28,7 +28,7 @@ whitelist_externals =
 
 [testenv:pylint]
 commands =
-    -sh -c 'pylint-patcher --rcfile=/usr/share/xivo-ci/pylintrc xivo_call_logs_client > pylint.txt'
+    -sh -c 'pylint-patcher --rcfile=/usr/share/xivo-ci/pylintrc wazo_call_logd_client > pylint.txt'
 deps =
     -rrequirements.txt
     -rtest-requirements.txt
