--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,40 @@ Source: wazo-call-logd-client
 Section: python
 Priority: extra
 Maintainer: Wazo Maintainers <dev@wazo.community>
-Build-Depends: debhelper (>= 8), dh-python, python-all (>= 2.7), python-setuptools
+Build-Depends: debhelper (>= 9),
+               dh-python,
+               python-all (>= 2.7),
+               python-setuptools,
+               python3-all,
+               python3-setuptools
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
+X-Python3-Version: >= 3.4
 
 Package: wazo-call-logd-client
 Architecture: all
 Section: python
-Depends: ${python:Depends}, ${misc:Depends}, xivo-lib-rest-client, python-requests, python-stevedore
+Depends: ${python:Depends},
+         ${misc:Depends},
+         python-requests,
+         python-stevedore,
+         xivo-lib-rest-client
 Conflicts: xivo-call-logs-client
 Replaces: xivo-call-logs-client
 Provides: xivo-call-logs-client
-Description: wazo-call-logd client library in python
+Description: wazo-call-logd client library - Python 2
+ Wazo is a system based on a powerful IPBX, to bring an easy to
+ install solution for telephony and related services.
+
+
+Package: wazo-call-logd-client-python3
+Architecture: all
+Section: python
+Depends: ${python:Depends},
+         ${misc:Depends},
+         python3-requests,
+         python3-stevedore,
+         xivo-lib-rest-client-python3
+Description: wazo-call-logd client library - Python 3
  Wazo is a system based on a powerful IPBX, to bring an easy to
  install solution for telephony and related services.
