--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pycodestyle, pylint
+envlist = py37, py27, pycodestyle, pylint
 skipsdist=True
 
 [testenv]
