--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,12 @@ skipsdist=True
 
 [testenv]
 commands =
-    nosetests --cover-package=wazo_call_logd_client --with-xunit --with-coverage --cover-xml --cover-erase wazo_call_logd_client
+    pytest --junitxml=unit-tests.xml --cov=wazo_call_logd_client --cov-report term --cov-report xml:coverage.xml wazo_call_logd_client
+
 deps =
     -rrequirements.txt
     -rtest-requirements.txt
-    coverage
+    pytest-cov
 
 [testenv:pycodestyle]
 commands =
