--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37, linters
-skipsdist=True
+envlist = py39, linters
+skipsdist = True
 
 [testenv]
 commands =
-    pytest --junitxml=unit-tests.xml --cov=wazo_call_logd_client --cov-report term --cov-report xml:coverage.xml wazo_call_logd_client
+    pytest --junitxml=unit-tests.xml --cov=wazo_call_logd_client --cov-report term --cov-report xml:coverage.xml wazo_call_logd_client {posargs}
 
 deps =
     -rrequirements.txt
@@ -22,8 +22,8 @@ deps = black
 commands = black --skip-string-normalization .
 
 [testenv:linters]
+basepython = python3.10
 skip_install = true
-basepython = python3.7
 deps =
     flake8
     flake8-colors
