--- a/tox.ini
+++ b/tox.ini
@@ -16,30 +16,8 @@ deps =
     -rtest-requirements.txt
     pytest-cov
 
-[testenv:black]
-skip_install = true
-deps = black
-commands = black --skip-string-normalization .
-
 [testenv:linters]
 basepython = python3.10
 skip_install = true
-deps =
-    flake8
-    flake8-colors
-    black
-commands =
-    flake8
-    black --skip-string-normalization --check .
-
-[flake8]
-exclude =
-    .tox
-    .eggs
-show-source = true
-max-line-length = 99
-application-import-names = wazo_call_logd_client
-# W503: line break before binary operator
-# E203: whitespace before ':' warnings
-ignore = E203, W503
-
+deps = pre-commit
+commands = pre-commit run --all-files
