--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: wazo-call-logd-client
 Section: python
-Priority: extra
+Priority: optional
 Maintainer: Wazo Maintainers <dev@wazo.community>
 Build-Depends: debhelper (>= 9),
                dh-python,
                python3-all,
                python3-setuptools
 Standards-Version: 3.9.6
-X-Python3-Version: >= 3.9
+X-Python3-Version: >= 3.11
 
 Package: wazo-call-logd-client-python3
 Architecture: all
